--- a/qna/templates/base.html
+++ b/qna/templates/base.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}My Q&A Site{% endblock %}</title>
+    <title>{% block title %}Medical Q&A Site Title{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'question_list' %}">Q&A Site</a>
+            <span class="navbar-brand">Medical Q&A Site</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'question_create' %}">Create Question</a>
+                        <a class="nav-link" href="{% url 'patient_register' %}">Start new survey</a>
                     </li>
                 </ul>
             </div>
@@ -27,7 +27,7 @@
     <!-- Main Content -->
     <div class="container mt-4">
         {% block content %}
-        <p>Welcome to the Q&A site!</p>
+        <p>Content of the Medical Q&A site!</p>
         {% endblock %}
     </div>
 
