--- a/qna/templates/base.html
+++ b/qna/templates/base.html
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'patient_register' %}">Start new survey</a>
+                        <a class="nav-link" href="{% url 'patient_register' %}">Start New Survey</a>
                     </li>
                 </ul>
             </div>
